--- a/digitectoolui/public/index.html
+++ b/digitectoolui/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#00559d" />
   <meta name="description" content="Schichtplan für Technik Digitec / Galaxus Wohlen" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
